--- a/express/myblog/views/404.ejs
+++ b/express/myblog/views/404.ejs
@@ -5,5 +5,5 @@
     <title><%= blog.title %></title>
     <script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8"></script>
   </head>
-  <body></body>
+  <body>404 Not Found</body>
 </html>
